server deploy update

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/authriya/noteful/issues"
   },
-  "homepage": "https://github.com/authriya/noteful#readme"
+  "homepage": "https://github.com/authriya/noteful"
 }
